# sqlab

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml
.githooks/: pre-commit
.github/workflows/: release.yml
assets/: app-icon.icns
docs/: index.html  llms.txt  release-installation.md  robots.txt  sitemap.xml
drivers/core/: Cargo.toml
drivers/core/src/: ddl.rs  lib.rs  manager.rs
drivers/databend/: Cargo.toml
drivers/databend/src/: lib.rs
drivers/duckdb/: Cargo.toml
drivers/duckdb/src/: lib.rs
drivers/mysql/: Cargo.toml
drivers/mysql/src/: lib.rs
drivers/postgres/: Cargo.toml
drivers/postgres/src/: README.md  lib.rs
drivers/sqlite/: Cargo.toml
drivers/sqlite/src/: lib.rs
editor/: Cargo.toml  build.rs
editor/src/: app_settings.rs  app_theme.rs  assets.rs  build_info.rs  credentials.rs  drivers.rs  keymap.rs  main.rs  query_session.rs  shortcuts.rs  workspace.rs
editor/src/schema_cache/: db.rs  mod.rs  models.rs
editor/src/ui/: activity.rs  mod.rs  search.rs  settings_page.rs
editor/src/ui/components/: tab.rs
editor/src/ui/panels/: bottom_panel.rs  diagram.rs  file_search.rs  keymap.rs  mod.rs  project_search.rs
editor/src/ui/panels/connection/: mod.rs
editor/src/ui/panels/file_editor/: data_editor.rs  ddl.rs  editor.rs  mod.rs  query_detector.rs  query_selector.rs  sql_completion.rs  tabs.rs
editor/src/ui/panels/file_tree/: mod.rs
editor/src/ui/panels/result/: mod.rs
editor/src/ui/panels/terminal/: mod.rs
editor/src/ui/themes/: darcula.json  jetbrains-dark.json  sq-lab.json
editor/wix/: main.wxs
packaging/flatpak/: io.github.fhsgoncalves.sqlab.desktop  io.github.fhsgoncalves.sqlab.metainfo.xml
scripts/: generate-homebrew-cask.sh  package-flatpak.sh  package-macos-dmg.sh
src/: app_theme.rs  config.rs  credentials.rs  main.rs  workspace.rs
src/data_source/: ddl.rs  manager.rs  mod.rs  postgres.rs
src/schema_cache/: db.rs  mod.rs  models.rs
src/ui/: mod.rs  search.rs
src/ui/components/: tab.rs
src/ui/panels/: bottom_panel.rs  file_search.rs  mod.rs  project_search.rs
src/ui/panels/connection/: mod.rs
src/ui/panels/file_editor/: editor.rs  mod.rs  query_detector.rs  query_selector.rs  sql_completion.rs  tabs.rs
src/ui/panels/file_tree/: mod.rs
src/ui/panels/result/: mod.rs
src/ui/panels/terminal/: mod.rs
src/ui/themes/: catppuccin.json
