[workspace]
members = ["editor", "drivers/core", "drivers/postgres", "drivers/mysql", "drivers/sqlite"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = "0.4"
uuid = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["array-impls", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
postgres_rustls = "0.1"
rustls = "0.23"
rustls-native-certs = "0.7"
rustls-pemfile = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
mysql_async = { version = "0.36", default-features = false, features = ["default-rustls-ring"] }
sqlparser = "0.56"
toml = "0.8"

[profile.dist]
inherits = "release"
lto = "thin"
