[package]
name = "sqlab"
version = "0.6.1"
edition = "2024"
description = "sq/lab is a SQL editor written in Rust using GPUI."
repository = "https://github.com/fhsgoncalves/sqlab"
authors = ["Fernando Goncalves"]

[package.metadata.bundle]
name = "sqlab"
identifier = "io.github.fhsgoncalves.sqlab"
icon = ["assets/app-icon.svg", "assets/app-icon.icns"]
category = "Developer Tool"
short_description = "sq/lab is a SQL editor written in Rust using GPUI."
long_description = """
sq/lab is a SQL editor written in Rust using GPUI.
"""

[package.metadata.wix]
upgrade-guid = "E36926E6-3C2B-43CE-ADE1-023908F7DB5E"
path-guid = "55759596-0493-46C5-B4C1-70262A11CB12"
license = false
eula = false

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "e2e7a6769e693c843c82cea2dcf65917c139cc0f" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"], rev = "e2e7a6769e693c843c82cea2dcf65917c139cc0f" }
gpui-component = { git = "https://github.com/fhsgoncalves/gpui-component", branch = "input-decoration-v2", features = ["tree-sitter-sql"] }
gpui-component-assets = { git = "https://github.com/fhsgoncalves/gpui-component", branch = "input-decoration-v2" }
sqlab-drivers-core = { path = "../drivers/core" }
sqlab-drivers-postgres = { path = "../drivers/postgres" }
sqlab-drivers-mysql = { path = "../drivers/mysql" }
sqlab-drivers-sqlite = { path = "../drivers/sqlite" }
sqlab-drivers-duckdb = { path = "../drivers/duckdb" }
sqlab-drivers-databend = { path = "../drivers/databend" }
image = "0.25.1"
fontdue = "0.9"
keyring-core = "1"
tree-sitter = "0.26"
tree-sitter-sequel = "0.3.8"
rusqlite = { workspace = true }
rust-embed = "8"
alacritty_terminal = "0.25"
async-channel = "2"
nucleo = "0.5"
ignore = "0.4"
regex = "1.12.3"
sqlformat = "0.5"
lsp-types = "0.97"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
zip = { version = "0.6", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }
