[package]
name = "zql-drivers-core"
version = "0.1.0"
edition = "2024"
description = "Core database driver traits and types for zql"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
