[package]
name = "sqlab-drivers-databend"
version = "0.3.0"
edition = "2024"
description = "Databend driver for sq/lab"
repository = "https://github.com/fhsgoncalves/sqlab"

[dependencies]
sqlab-drivers-core = { path = "../core" }
async-trait = { workspace = true }
databend-driver = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
