[package]
name = "sqlab-drivers-duckdb"
version = "0.3.0"
edition = "2024"
description = "DuckDB driver for sq/lab"
repository = "https://github.com/fhsgoncalves/sqlab"

[dependencies]
sqlab-drivers-core = { path = "../core" }
async-trait = { workspace = true }
chrono = { workspace = true }
duckdb = { workspace = true }
sqlparser = { workspace = true }
