[package]
name = "zql-drivers-postgres"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL driver for zql"

[dependencies]
zql-drivers-core = { path = "../core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
postgres_rustls = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
